fix. 상점 이름 제거, 물품 db 추가
